--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,7 +3,7 @@ name: Run all the tests
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches: [main]
     types: [opened, synchronize]
