--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,6 +21,9 @@ jobs:
         
       - name: run tests
         run: npm run test
+
+      - name: Check style
+        run: npm run lint
         
       - name: Trigger deployment
         run: curl ${{ secrets.RENDER_DEPLOY_HOOK }}
